<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.abhishekbatra.kharcha.WalktroughActivity$PlaceholderFragment">

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/heading_starbucks"
        android:textColor="@color/white_primary_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <in.abhishekbatra.kharcha.views.TextViewPlus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_coffee"
            android:textColor="@color/white_secondary_text"
            android:textSize="150sp"
            app:customFont="tonicons.ttf"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/startbuck_details"
            android:textAlignment="center"
            android:textColor="@color/white_secondary_text"/>
    </LinearLayout>


</LinearLayout>

